Changed the HTML for the site3.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -71,8 +71,8 @@
   <section id="intro" class="intro">
 
     <div class="slogan">
-      <h2>DENISEEE FICOU PRONTOOOO <span class="text_color">DENISSEEE</span> </h2>
-      <h4>SITE PARA APRENDER MACHINE LEARNING GENTE</h4>
+      <h2>hhhh <span class="text_color">DENISSEEE</span> </h2>
+      <h4>SITE PARA APRENDER MACHINE LEARNING </h4>
     </div>
     <div class="page-scroll">
       <a href="#service" class="btn btn-circle">
@@ -329,12 +329,12 @@
 
             <address>
 				  <strong>Email</strong><br>
-				  <a href="mailto:#">email.name@example.com</a>
+				  <a href="mailto:#">cibele_cast@hotmail.com</a>
 				</address>
             <address>
 				  <strong>We're on social networks</strong><br>
                        	<ul class="company-social">
-                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li class="social-facebook"><a href="https://github.com/cibelecastelo" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
                             <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
