--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -310,7 +310,7 @@ hr {
 .intro {
 	width:100%;
 	position:relative;
-	background: url("{% static "blog/img/machinelearning.jpg" %}") no-repeat top center;
+	background: url(../img/machinelearning.jpg) no-repeat top center;
     background-size: cover;
     height: auto;
 }
