--- a/blog/templates/blog/styles.html
+++ b/blog/templates/blog/styles.html
@@ -309,8 +309,7 @@
       	<div class="col-six tab-full">
 
       		<h3>Responsive Image</h3>
-
-      		<p><img src="images/portfolio/modals/m-lighthouse.jpg"></p>
+      		<p><img src="{% static "blog/images/portfolio/modals/m-lighthouse.jpg">" %} ></p>
 
       	</div>
 
