Changed the HTML for the site7.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -195,7 +195,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Me contrate" class="button stroke smoothscroll">Hire Me</a>
+   			<a href="#contact" title="Me contrate" class="button stroke smoothscroll">Me contrate</a>
    			<a href="https://drive.google.com/file/d/1Hedb77gr_3lFqQNpjgVQCwoXfXn3bwpF/view?usp=sharing" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
@@ -351,57 +351,23 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
+		    <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="{% static "blog/images/portfolio/lighthouse.jpg" %}" alt="Beetle">
+	                  <a href="#modal-01" class="overlay">                  	                 
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Beetle</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Branding
+		     					      </span>		     		
+		     					   </div>  	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item --> 
+
 	         	<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="{% static "blog/images/portfolio/liberty.jpg" %} alt="Liberty">
-	                  <a href="#modal-01" class="overlay">	                  	           
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">nem foiii</h3>	     					    
-		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
-		     					       </span>
-		     					   </div>	                      	
-	                     </div>                    
-	                  </a>
-	               </div>	               
-	        		</div> <!-- /folio-item -->
-
-	        		<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="{% static "blog/images/portfolio/shutterbug.jpg" %} alt="Shutterbug">
-	               	<a href="#modal-02" class="overlay">              		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Web Design
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="{% static "blog/images/portfolio/clouds.jpg" %}"alt="Clouds">
-
-
-	                  <a href="#modal-03" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Web Design
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="{% static "blog/images/portfolio/beetle.jpg" %}" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
@@ -415,19 +381,17 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->     
+	        		</div> <!-- /folio-item --> 
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="{% static "blog/images/portfolio/lighthouse.jpg" %}" alt="Lighthouse">
-
-
-	                  <a href="#modal-05" class="overlay">             		                  
+	               	<img src="{% static "blog/images/portfolio/shutterbug.jpg" %}" alt="Shutterbug">
+	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">KAGGLE – COMPETIÇÃO PORTO SEGURO</h3>	     					    
+	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	EXCLUIR
+		     					       	  Web Design
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -435,10 +399,28 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	            <div class="bgrid folio-item">
+                    <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="{% static "blog/images/portfolio/modals/salad.jpg" %}" alt="Salad">
-	                  <a href="#modal-03" class="overlay">
+	               	<img src="{% static "blog/images/portfolio/clouds.jpg" %}" alt="clouds">
+	                  <a href="#modal-03" class="overlay">                  	                 
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">clouds</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Branding
+		     					      </span>		     		
+		     					   </div>  	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item --> 
+		            
+
+
+ 	             <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="{% static "blog/images/portfolio/salad.jpg" %}" alt="Salad">
+	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Salad</h3>	     					    
@@ -449,26 +431,47 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->   
+	        		</div> <!-- /folio-item --> 
+			
+		     <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="{% static "blog/images/portfolio/liberty.jpg" %}" alt="Liberty">
+	                  <a href="#modal-05" class="overlay">	                  	           
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+		     					       <h3 class="folio-title">liberty</h3>	     					    
+		     					    	 <span class="folio-types">
+		     					       	  Graphic Design
+		     					       </span>
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>	               
+	        		</div> <!-- /folio-item -->
+
+
+
 
 	            <!-- modal popups - begin
-	            ============================================================= -->
-	            <div id="modal-01" class="popup-modal slider mfp-hide">	
+	            ============================================================= 
+-->
+	            <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
-				     	</div>      	
+				     		<img src="{% static "blog/images/portfolio/modals/m-liberty.jpg" %}" alt="" />
+				     	</div>  
+    	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Sistema de Intervenção Estudantil</h4>		      
+					      <p align='justify'>Investigue os fatores que afetam a performance de estudantes no ensino médio. Treine e teste vários modelos de aprendizagem de máquina supervisionada em um conjunto de dados para prever quão provável um estudante passará. Selecione o melhor modelo baseado na precisão relativa e eficiência.</p>
 
-					      <div class="categories">Web Development</div>			               
-					   </div>
+					      <div class="categories">Tipos de problemas: Regressão vs. Classificação, Treinamento e predição do modelo, Árvores de decisão,Regressão, Redes Neurais, SVM, Naive Bayes, K-Nearest Neighbors e Adaboosting.</div>			               
+					   </div>			            
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+			           <a href="https://github.com/cibelecastelo/Criando-um-sistema-de-intervencao-de-alunos/blob/master/student_intervention_PT.ipynb">Detalhes</a>
+					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
 				   </div> <!-- /modal-01 -->
@@ -481,15 +484,15 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Criando Segmentos de Consumidores</h4>		      
+					      <p align='justify'>Revise dados não estruturados para entender os padrões e categorias naturais que os dados se encaixam. Utilize múltiplos algoritmos e os compare empiricamente e teoricamente contrastando os resultados. Faça previsões sobre as categorias naturais de vários tipos no conjunto de dados, então verifique essas previsões contra o resultado da análise não supervisionada.</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Clusterização, PCA/ICA, SKlearn, Seleção de feature e Visualização de dados.</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+			            <a href="https://github.com/cibelecastelo/Projeto-Udacity---Criando-segmentos-de-clientela/blob/master/student_intervention_PT.ipynb">Detalhes</a>
+					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
 				   </div> <!-- /modal-02 -->
@@ -497,7 +500,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="{% static "blog/images/portfolio/modals/m-salad.jpg" %}" alt="" />
+				     		<img src="{% static "blog/images/portfolio/modals/m-clouds.jpg" %}" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -531,13 +534,13 @@ demostra a eficácia do modelo na generalização de dados ainda não vistos..</
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.miaudote.com.br">Details</a>
+			            <a href="http://www.miaudote.com.br">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
 				   </div> <!-- /modal-04 -->
 
-				   <div id="modal-05" class="popup-modal slider mfp-hide">	
+				   <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="{% static "blog/images/portfolio/modals/m-lighthouse.jpg" %}" alt="" />
@@ -561,20 +564,19 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="{% static "blog/images/portfolio/modals/m-a.jpg" %}" alt="" />
+				     		<img src="{% static "blog/images/portfolio/modals/m-salad.jpg" %}" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>CRIANDO SEGMENTO DE CONSUMIDORES</h4>		      
-					      <p align='justify'>Revise dados não estruturados para entender os padrões e categorias naturais que os dados se encaixam. Utilize múltiplos algoritmos e os compare empiricamente e teoricamente contrastando os resultados. Faça previsões sobre as categorias naturais de vários tipos no conjunto de dados, então verifique essas previsões contra o resultado da
-análise não supervisionada.</p>
+					      <h4>Prevendo os preços das casas de Boston</h4>		      
+					      <p align='justify'>Construa um modelo para prever o valor de uma casa no mercado de Boston utilizando várias ferramentas de análise estatística. Identifique o melhor preço que um cliente pode vender sua casa utilizando machine learning.</p>
 
-					      <div class="categories">Clusterização, PCA/ICA, SKlearn, Seleção de feature e visualização de dados.</div>			               
+					      <div class="categories">Branding</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+			            <a href="https://github.com/cibelecastelo/Projeto-Boston-House/blob/master/boston_housing.ipynb">Detalhes</a>
+					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
 				   </div> <!-- /modal-06 -->
