--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -51,11 +51,11 @@
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll"  href="#about" title="">Sobre</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Curriculum</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
+						<li><a class="smoothscroll"  href="#services" title="">Serviços</a></li>					
+						<li><a class="smoothscroll"  href="#contact" title="">Contato</a></li>	
 						<li><a href="styles.html" title="">Style Demo</a></li>				
 					</ul>
 				</nav>    		
@@ -95,8 +95,7 @@
          <li><a href="https://www.linkedin.com/in/cibelecastelo/"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://www.facebook.com/cibele.cast"><i class="fa fa-facebook"></i></a></li>
 	<li><a href="https://www.meetup.com/pt-BR/members/226651527"><i class="fa fa-medium"></i></a></li>
-	<li><a href="https://www.linkedin.com/in/cibelecastelo/"><i class="fa fa-medium"></i></a></li>
-	<li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+	<li><a href="https://github.com/cibelecastelo"><i class="fa fa-meetup"></i></a></li>  
 
       </ul> <!-- /intro-social -->      	
 
@@ -117,7 +116,8 @@
 
    				<img src="{% static "blog/images/profile-pic.jpg" %}" alt="Profile Picture">
 
-   				<p class="lead">Ama desafios e possui extrema paixão com tecnologia, possui interesse na área de ciência de dados, machine learning e inteligência artificial. Possui facilidade e empenho em aprender novas tecnologias.Deseja trabalhar em uma empresa/startup que possibilite o crescimento, compartilhamento e inovação.</p>
+   				<p class="lead text-align-justify"> Ama desafios e possui extrema paixão com tecnologia, possui interesse na área de ciência de dados, machine learning e inteligência artificial. Possui facilidade e empenho em aprender novas tecnologias.Deseja trabalhar em uma empresa/startup que possibilite o crescimento, compartilhamento e inovação.</p>
+				
    			</div>   			
 
    		</div>   		
@@ -243,7 +243,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
 	   				<div class="timeline-content">
 	   					<h4>MD2 Consultoria</h4>
-	   					<p>Instalações de softwares da IBM utilizados nos Projetos de BI. Programação, práticas e estudos de análise de dados utilizando a ferramenta DataStage Designer e Data Quality, para projetos de ETL.  Outros: Instalação IBM Information Server, Instalação CDD,...Participação de projeto de governança de dados com a utilização da ferramenta Infopshere Information Governance Catalog</p>
+	   					<p align='justify'>Instalações de softwares da IBM utilizados nos Projetos de BI. Programação, práticas e estudos de análise de dados utilizando a ferramenta DataStage Designer e Data Quality, para projetos de ETL.  Outros: Instalação IBM Information Server, Instalação CDD,...Participação de projeto de governança de dados com a utilização da ferramenta Infopshere Information Governance Catalog</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -261,7 +261,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
 	   				<div class="timeline-content">
 	   					<h4>Lafarge</h4>
-	   					<p>Apoio no desenvolvimento, melhorias, suporte e correções dos softwares aplicativos corporativos e banco de dados da empresa visando garantir o funcionamento e disponibilidades dos mesmos. Além disso, suporte e atendimento aos usuários do sistema.</p>
+	   					<p align='justify'>Apoio no desenvolvimento, melhorias, suporte e correções dos softwares aplicativos corporativos e banco de dados da empresa visando garantir o funcionamento e disponibilidades dos mesmos. Além disso, suporte e atendimento aos usuários do sistema.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -297,7 +297,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
 	   				<div class="timeline-content">
 	   					<h4>Udacity</h4>
-	   					<p>Especialização de engenheira de machine learning que possibilitou aprender a construir modelos preditivos que possibilitam os computadores a agir, aprender e tomar decisões baseados em dados. Foi abordado conceitos fundamentos de aprendizagem supervisionada, aprendizagem não supervisionada, aprendizagem por reforço e deep learning, além de avaliação e validação de modelos. O projeto final desenvolvido possibilitou realizar todo o ciclo de ciência de dados.</p>
+	   					<p align='justify'>Especialização de engenheira de machine learning que possibilitou aprender a construir modelos preditivos que possibilitam os computadores a agir, aprender e tomar decisões baseados em dados. Foi abordado conceitos fundamentos de aprendizagem supervisionada, aprendizagem não supervisionada, aprendizagem por reforço e deep learning, além de avaliação e validação de modelos. O projeto final desenvolvido possibilitou realizar todo o ciclo de ciência de dados.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -315,7 +315,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
 	   				<div class="timeline-content">
 	   					<h4>Centro Universitário Newton Paiva</h4>
-	   					<p>Graduada em Sistemas de Informação, este curso possibilitou o meu primeiro contato com tecnologia da informação. Foram desenvolvidos projetos na área de programação,banco de dados, redes e webdesign .</p>
+	   					<p align='justify'>Graduada em Sistemas de Informação, este curso possibilitou o meu primeiro contato com tecnologia da informação. Foram desenvolvidos projetos na área de programação,banco de dados, redes e webdesign .</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
