--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -43,10 +43,8 @@
 
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
-
-	   		<div class="logo">
-		         <a href="index.html">CC</a>
-		      </div>		      
+		      <div class="logo>
+		      </div>
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
@@ -54,11 +52,9 @@
 						<li><a class="smoothscroll"  href="#about" title="">Sobre</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Curriculum</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Serviços</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contato</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+							
 					</ul>
-				</nav>    		
+			</nav>    		
    		</div> <!-- /top-bar --> 
    		
    	</div> <!-- /row --> 		
@@ -171,23 +167,68 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 				   	<div class="progress percent90"><span>90%</span></div>
 				   	<strong>Python</strong>
 				   </li>
+<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>SQL</strong>
 				   </li>
-				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+<li>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>SKlearn</strong>
 				   </li>
+
+<li>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>Machine Learning</strong>
+				   </li>
+				 
+				 
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>Pandas</strong>
 				   </li>
 				   <li>
 
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>MatplotLib/Seaborn</strong>
 				   </li>
+
+<li>
+				   	<div class="progress percent70"><span>70%</span></div>
+				   	<strong>Visualização de Dados</strong>
+				   </li>
+
+<li>
+				   	<div class="progress percent70"><span>70%</span></div>
+				   	<strong>HTML</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent70"><span>70%</span></div>
+				   	<strong>CSS</strong>
+				   </li>
+
+<li>
+				   	<div class="progress percent60"><span>60%</span></div>
+				   	<strong>Django</strong>
+				   </li>
+
+ <li>
+
+				   	<div class="progress percent60"><span>60%</span></div>
+				   	<strong>SCRUM</strong>
+				   </li>
+<li>
+				   	<div class="progress percent40"><span>40%</span></div>
+				   	<strong>R</strong>
+				   </li>
+
+<li>
+				   	<div class="progress percent45"><span>30%</span></div>
+				   	<strong>Web Scraping</strong>
+				   </li>
+
+
+
       
 				</ul> <!-- /skill-bars -->		
 
@@ -599,71 +640,11 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
 	
    <!-- contact
    ================================================== -->
-	<section id="contact">
-
-		<div class="row section-intro">
-   		<div class="col-twelve">
-
-   			<h5>Contato
-</h5>
-   			<h1>Entre em contato comigo.</h1>
-
-   			<p class="lead">Sinta-se a vontade para enviar um e-mail ou mandar uma mensagem via telegram ou whatsapp.</p>
-
-   		</div> 
-   	</div> <!-- /section-intro -->
-
-   	<div class="row contact-form">
-
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
-      			<fieldset>
-
-                  <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Nome" value="" minlength="2" required="">
-                  </div>
-                  <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-	               </div>
-                  <div class="form-field">
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Assunto" value="">
-	               </div>                       
-                  <div class="form-field">
-	                 	<textarea name="contactMessage" id="contactMessage" placeholder="Mensagem" rows="10" cols="50" required=""></textarea>
-	               </div>                      
-                 <div class="form-field">
-                     <button class="submitform">Enviar</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>                             
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
-								</div>
-							</div>
-                  </div>
-
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning">            	
-            </div>            
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-   		
-   	</div> <!-- /contact-form -->
-
+     <div class="centre">
    	<div class="row contact-info">
-
-   		<div class="col-four tab-full collapse">
-
+	   
+   		<div class="col-four tab-full collapse">   
+ 
    			<div class="icon">
    				<i class="icon-mail"></i>
    			</div>
@@ -672,7 +653,6 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
 
    			<p>cibele_cast@hotmail.com<br>			     
 			   </p>
-
    		</div>
 
    		<div class="col-four tab-full">
@@ -692,7 +672,7 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
    	</div> <!-- /contact-info -->
 		
 	</section> <!-- /contact -->
-
+  </div>
 
    <!-- footer
    ================================================== -->
@@ -703,11 +683,13 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			      <li><a href="https://github.com/cibelecastelo"><i class="fa fa-github"></i></a></li>        
+         <li><a href="https://www.linkedin.com/in/cibelecastelo/"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://www.facebook.com/cibele.cast"><i class="fa fa-facebook"></i></a></li>
+	<li><a href="https://medium.com/@cibelecastelo"><i class="fa fa-medium"></i></a></li>
+	<li><a href="https://www.meetup.com/pt-BR/members/226651527"><i class="fa fa-meetup" aria-hidden="true"></i></a></li> 
+	<li><a href="https://t.me/cibelecastelo"><i class="fa fa-telegram" ></i></a></li> 
+	<li><a href="https://www.kaggle.com/cibelecast/competitions"><i class="fa fa-anchor"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
