Changed the HTML11 for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -146,7 +146,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.cibelecastelo.com</span>
+   					<span>www.cibelecastelo.ml</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -640,7 +640,7 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
 	
    <!-- contact
    ================================================== -->
-     <div class="centre">
+    
    	<div class="row contact-info">
 	   
    		<div class="col-four tab-full collapse">   
@@ -672,7 +672,7 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
    	</div> <!-- /contact-info -->
 		
 	</section> <!-- /contact -->
-  </div>
+
 
    <!-- footer
    ================================================== -->
