Changed the HTML11 for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -71,7 +71,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Bem, vindo</h5>
+	   			<h5>Bem Vindo</h5>
 	   			<h1>Cibele Castelo</h1>
 
 	   			<p class="intro-position">
@@ -160,7 +160,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
    		<div class="col-six tab-full">
 
    			<h3>Habilidades</h3>
-   			<p>Possui habilidades na área de desenvolvimento3</p>
+   			
 
 				<ul class="skill-bars">
 				   <li>
@@ -416,7 +416,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">MiauDote</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Branding
 		     					      </span>		     		
@@ -448,7 +448,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-03" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">clouds</h3>	     					    
+	                     		<h3 class="folio-title">movehub cities</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Branding
 		     					      </span>		     		
@@ -466,7 +466,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Boston House</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Branding
 		     					      </span>		     		
@@ -482,7 +482,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-05" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">liberty</h3>	     					    
+		     					       <h3 class="folio-title">Sistema de Intervenção de Alunos</h3>	     					    
 		     					    	 <span class="folio-types">
 		     					       	  Graphic Design
 		     					       </span>
