--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -400,7 +400,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-01" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Porto Seguro</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Branding
 		     					      </span>		     		
@@ -416,7 +416,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Porto Seguro</h3>	     					    
+	                     		<h3 class="folio-title">Miaudote</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Branding
 		     					      </span>		     		
@@ -448,7 +448,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-03" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">clouds</h3>	     					    
+	                     		<h3 class="folio-title">movehub cities</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Branding
 		     					      </span>		     		
@@ -466,7 +466,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Boston House</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Branding
 		     					      </span>		     		
@@ -482,7 +482,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	                  <a href="#modal-05" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">liberty</h3>	     					    
+		     					       <h3 class="folio-title">Sistema de Intervenção de Alunos</h3>	     					    
 		     					    	 <span class="folio-types">
 		     					       	  Graphic Design
 		     					       </span>
