Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -71,7 +71,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Bem, vindo</h5>
+	   			<h5>Bem Vindo</h5>
 	   			<h1>Cibele Castelo</h1>
 
 	   			<p class="intro-position">
