Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -87,13 +87,13 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">
-	 <li><a href="https://github.com/cibelecastelo"><i class="fa fa-github"></i></a></li>        
-         <li><a href="https://www.linkedin.com/in/cibelecastelo/"><i class="fa fa-linkedin"></i></a></li>
-         <li><a href="https://www.facebook.com/cibele.cast"><i class="fa fa-facebook"></i></a></li>
-	<li><a href="https://medium.com/@cibelecastelo"><i class="fa fa-medium"></i></a></li>
-	<li><a href="https://www.meetup.com/pt-BR/members/226651527"><i class="fa fa-meetup" aria-hidden="true"></i></a></li> 
-	<li><a href="https://t.me/cibelecastelo"><i class="fa fa-telegram" ></i></a></li> 
-	<li><a href="https://www.kaggle.com/cibelecast/competitions"><i class="fa fa-anchor"></i></a></li> 
+	 <li><a href="https://github.com/cibelecastelo" target="_blank"><i class="fa fa-github"></i></a></li>        
+         <li><a href="https://www.linkedin.com/in/cibelecastelo/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://www.facebook.com/cibele.cast" target="_blank"><i class="fa fa-facebook"></i></a></li>
+	<li><a href="https://medium.com/@cibelecastelo" target="_blank"><i class="fa fa-medium"></i></a></li>
+	<li><a href="https://www.meetup.com/pt-BR/members/226651527" target="_blank"><i class="fa fa-meetup" aria-hidden="true"></i></a></li> 
+	<li><a href="https://t.me/cibelecastelo" target="_blank"><i class="fa fa-telegram" ></i></a></li> 
+	<li><a href="https://www.kaggle.com/cibelecast/competitions" target="_blank"><i class="fa fa-anchor"></i></a></li> 
 
       </ul> <!-- /intro-social -->      	
 
