Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -238,7 +238,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Me contrate" class="button stroke smoothscroll">Me contrate</a>
-   			<a href="https://drive.google.com/file/d/1Hedb77gr_3lFqQNpjgVQCwoXfXn3bwpF/view?usp=sharing" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/1Hedb77gr_3lFqQNpjgVQCwoXfXn3bwpF/view?usp=sharing target="_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -512,7 +512,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 					   </div>			            
 
 			         <div class="link-box">
-			           <a href="https://github.com/cibelecastelo/Criando-um-sistema-de-intervencao-de-alunos/blob/master/student_intervention_PT.ipynb">Detalhes</a>
+			           <a href="https://github.com/cibelecastelo/Criando-um-sistema-de-intervencao-de-alunos/blob/master/student_intervention_PT.ipynb" target="_blank">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
@@ -533,7 +533,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/cibelecastelo/Projeto-Udacity---Criando-segmentos-de-clientela/blob/master/student_intervention_PT.ipynb">Detalhes</a>
+			            <a href="https://github.com/cibelecastelo/Projeto-Udacity---Criando-segmentos-de-clientela/blob/master/student_intervention_PT.ipynb" target="_blank">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
@@ -556,7 +556,7 @@ demostra a eficácia do modelo na generalização de dados ainda não vistos..</
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/cibelecastelo/Kaggle---Competicao-de-Machine-Learning---MoveHub-Cities/blob/master/Artigo%20-%20Movehub%20Cities.pdf">Detalhes</a>
+			            <a href="https://github.com/cibelecastelo/Kaggle---Competicao-de-Machine-Learning---MoveHub-Cities/blob/master/Artigo%20-%20Movehub%20Cities.pdf" target="_blank">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
@@ -576,7 +576,7 @@ demostra a eficácia do modelo na generalização de dados ainda não vistos..</
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.miaudote.com.br">Detalhes</a>
+			            <a href="http://www.miaudote.com.br" target="_blank">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
@@ -597,7 +597,7 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/cibelecastelo/Projeto-de-Conclusao-de-Curso---Nanodegree-Machine-Learning/blob/master/Projeto%20de%20Conclus%C3%A3o_Cibele%20Castelo%20Nogueira.pdf">Detalhes</a>
+			            <a href="https://github.com/cibelecastelo/Projeto-de-Conclusao-de-Curso---Nanodegree-Machine-Learning/blob/master/Projeto%20de%20Conclus%C3%A3o_Cibele%20Castelo%20Nogueira.pdf" target="_blank">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
@@ -617,7 +617,7 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/cibelecastelo/Projeto-Boston-House/blob/master/boston_housing.ipynb">Detalhes</a>
+			            <a href="https://github.com/cibelecastelo/Projeto-Boston-House/blob/master/boston_housing.ipynb" target="_blank">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
@@ -682,12 +682,12 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <li><a href="https://github.com/cibelecastelo"><i class="fa fa-github"></i></a></li>        
-         <li><a href="https://www.linkedin.com/in/cibelecastelo/"><i class="fa fa-linkedin"></i></a></li>
-         <li><a href="https://www.facebook.com/cibele.cast"><i class="fa fa-facebook"></i></a></li>
-	<li><a href="https://medium.com/@cibelecastelo"><i class="fa fa-medium"></i></a></li>
-	<li><a href="https://www.meetup.com/pt-BR/members/226651527"><i class="fa fa-meetup" aria-hidden="true"></i></a></li> 
-	<li><a href="https://t.me/cibelecastelo"><i class="fa fa-telegram" ></i></a></li> 
+			      <li><a href="https://github.com/cibelecastelo"><i class="fa fa-github" target="_blank"></i></a></li>        
+         <li><a href="https://www.linkedin.com/in/cibelecastelo/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://www.facebook.com/cibele.cast" target="_blank"><i class="fa fa-facebook"></i></a></li>
+	<li><a href="https://medium.com/@cibelecastelo" target="_blank"><i class="fa fa-medium"></i></a></li>
+	<li><a href="https://www.meetup.com/pt-BR/members/226651527" target="_blank"><i class="fa fa-meetup" aria-hidden="true"></i></a></li> 
+	<li><a href="https://t.me/cibelecastelo" target="_blank"><i class="fa fa-telegram" ></i></a></li> 
 	<li><a href="https://www.kaggle.com/cibelecast/competitions"><i class="fa fa-anchor"></i></a></li>
 			   </ul> 
 	      		
