Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -238,7 +238,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Me contrate" class="button stroke smoothscroll">Me contrate</a>
-   			<a href="https://drive.google.com/file/d/1Hedb77gr_3lFqQNpjgVQCwoXfXn3bwpF/view?usp=sharing target="_blank" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/1Hedb77gr_3lFqQNpjgVQCwoXfXn3bwpF/view?" target="_blank"" usp=sharing  title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -576,7 +576,7 @@ demostra a eficácia do modelo na generalização de dados ainda não vistos..</
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.miaudote.com.br" target="_blank">Detalhes</a>
+			            <a href="http://www.miaudote.com.br" target="_blank"> target="_blank">Detalhes</a>
 					      <a href="#" class="popup-modal-dismiss">Fechar</a>
 			         </div>		      
 
