--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -75,8 +75,8 @@
 	   			<h1>Cibele Castelo</h1>
 
 	   			<p class="intro-position">
-	   				<span>Engenheira de Machine Learning</span>
-	   				<span>Desenvolvedora Python</span> 
+	   				<span>Machine Learning Engineer</span>
+	   				<span>Python Developer</span> 
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">Mais Sobre Mim</a>
